--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,7 @@
     <!-- ThreeJS and Vanta -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.clouds.min.js"></script>
+    <!-- CanvasJS -->
+    <!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
   </body>
 </html>
